Fixed bounds (my arithmetic is questionable!)

--- a/mpaper/example.tex
+++ b/mpaper/example.tex
@@ -417,12 +417,12 @@ This heuristic, however, can be improved further. In particular, this heuristic 
 
 \begin{corollary}
   \label{cor/min_rounds_caterpillar}
-  Given a maximal caterpillar $C_G$ with length $L$, and index its path vertices from $1$ to $L$, where vertex $1$ is coloured first when colouring a caterpillar. After colouring the leaf vertex $v$ adjacent to path vertex $n$, the minimum number of rounds required to burn the rest of the caterpillar is at least $\lceil \frac{L-n-3}{8} \rceil + 1$.
+  Given a maximal caterpillar $C_G$ with length $L$, and index its path vertices from $1$ to $L$, where vertex $1$ is coloured first when colouring a caterpillar. After colouring the leaf vertex $v$ adjacent to path vertex $n$, the minimum number of rounds required to burn the rest of the caterpillar is at least $\lceil \frac{L-n-3}{6} \rceil + 1$.
 \end{corollary}
 \begin{proof}
 First, since we colour a caterpillar by splitting it into pieces containing at most 3 path vertices, and colouring this piece before colouring the remainder, then at most 3 path vertices ahead of $v$ can be coloured - at most 2 other vertices in the same piece as $v$, and potentially one more in the next piece, if the ending constraints $B$ or $R$ are chosen. So the number of remaining path vertices is at least $L - n - 3$.
 
-To colour the remainder of the graph, we colour the path vertices adjacent to the left and right endpoint of the unburned section respectively. This means that at most 8 path vertices are burned per round, since the fire from these path vertices can spread inwards in both directions. This then repeats until no path vertices are remaining. At this point, some leaf vertices may still be unburned, but these will all be burned within one round. Therefore the minimum number of rounds required is at most $\lceil \frac{L-n-3}{8} \rceil + 1$, proving the corollary.
+To colour the remainder of the graph, we colour the path vertices adjacent to the left and right endpoint of the unburned section respectively. This means that at most 6 path vertices are burned per round, since the fire from these path vertices can spread in both directions. This then repeats with the remaining unburned section of the path until no path vertices are remaining. At this point, some leaf vertices may still be unburned, but these will all be burned within one round. Therefore the minimum number of rounds required is at most $\lceil \frac{L-n-3}{6} \rceil + 1$, proving the corollary.
 \end{proof}
 
 An important remark of this corollary is that moving over one leaf vertex, going from position $n$ to position $n+1$, reduces the minimum number of rounds required by at most 1. And since the maximum rooted diameter of a tree rooted at a leaf at position $n+1$ is at most 1 more than that rooted at position $n$, the tree with maximum possible rooted diameter is still always found at the saame position as before.
@@ -441,7 +441,7 @@ From this result, Theorem \ref{thm/root-diameter-bound-2} can be updated further
 \begin{corollary}
 \label{cor/diameter_bound_full_2}
     % i've slipped up somewhere, since this is greater than the last bound for large enough L
-Given a tree $G$ with diameter $L$, which is coloured by first colouring its maximal caterpillar $C_G$, the maximum number of red clusters on $G$ is at most $\frac{11L-30}{6}$.
+Given a tree $G$ with diameter $L$, which is coloured by first colouring its maximal caterpillar $C_G$, the maximum number of red clusters on $G$ is at most $\frac{13(L-2)}{12}$.
 
 \end{corollary}
 
